# syncGitPy

./: .gitignore  README.md  main.py  pyproject.toml  syncGit.py  test.py  testSyncGit.py
src/syncGitPy/: __init__.py  __main__.py  args_parser.py  fr-fr.json  fr_fr.py  syncGit.py
test/: testSyncGit.py
