# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "syncGitPy"
version = "0.9.0"
description = "un script python pour synchroniser les dépôts locaux avec leur remote."
readme = "README.md"
authors = [{ name = "Guillaume Baron", email = "guillaume.baron62@orange.fr" }]
license = { file = "COPYING" }
classifiers = [
    "License :: OSI Approved :: GNU GPLv3 License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["feed", "reader", "tutorial"]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["bumpver"]

[project.urls]
Homepage = "https://github.com/realpython/reader"

[project.scripts]
syncGit = "syncGitPy.__main__:main"


[tool.bumpver]
current_version = "0.9.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}"
]
"src/syncGitPy/__init__.py" = ["{version}"]

